--- a/blog.html
+++ b/blog.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="styles.css">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>blog.html</title>
 </head>
@@ -19,26 +18,21 @@
 <body>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 
     <!-- Header -->
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="63" width="80"></span>
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        <div class="menuHorizontal collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="list.html">Home <span class="sr-only"></span></a>
@@ -54,30 +48,19 @@
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
-            <button class="LogIn btn btn-outline-primary" type="submit"> LogIn -
-                Register
-            </button>
+            <button class="LogIn btn btn-outline-light" type="submit"> LogIn -
+                    Register
+                </button>
         </div>
     </nav>
 
-    <div class="jumbotron">
-        <div class="container text-Left">
-            <p class="h1 text-primary">
-                I am looking for friend!</p>
-            <p class="h6">This is a template for a simple marketing or informational website. This is a template for a
-                simple marketing or informational website. This is a template for a simple marketing or informational
-                wplate for a simple marketing or informational
-                website. This is a template for a simple marketing or informational website. This is a template for a
-                simple marketing or informational website. This is a template for a simple marketing or informational
-                website. This is a template for a simple marketing or informational website. This is a template for a
-                simple marketing or informational website. </p>
-            <button type="button" class="btn btn-primary">Learn more >></button>
+    <div class="logo">
+        <img src="assets/Patitas-01.jpg" class="img-responsive" alt="" title="">
 
-        </div>
     </div>
+    <hr />
+
     <div class="titulo">
         <blockquote class="blockquote text-center">
             <p class="mb-0">
@@ -93,8 +76,7 @@
                 <div class="row">
                     <div class="col col-4">
                         <a href="blog.html" title="Gracias" id="featured-thumbnail">
-                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid"
-                                    alt="asdfd" title="asdfasdf">
+                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid" alt="asdfd" title="asdfasdf">
                             </div>
                         </a>
                     </div>
@@ -103,9 +85,7 @@
                         <p class="card-text"><small class="text-muted">FAMILIA RODRIGUEZ | Última actualización 3
                                 semanas</small></p>
                         <hr />
-                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
-                            majority have suffered alteration in some form, by injected humour, or randomised words
-                            which don't look even slightly believable.</p>
+                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
                     </div>
                 </div>
 
@@ -114,8 +94,7 @@
                 <div class="row">
                     <div class="col col-4">
                         <a href="blog.html" title="Gracias" id="featured-thumbnail">
-                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid"
-                                    alt="asdfd" title="asdfasdf">
+                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid" alt="asdfd" title="asdfasdf">
                             </div>
                         </a>
                     </div>
@@ -124,9 +103,7 @@
                         <p class="card-text"><small class="text-muted">FAMILIA RODRIGUEZ | Última actualización 3
                                 semanas</small></p>
                         <hr />
-                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
-                            majority have suffered alteration in some form, by injected humour, or randomised words
-                            which don't look even slightly believable.</p>
+                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
                     </div>
                 </div>
 
@@ -135,8 +112,7 @@
                 <div class="row">
                     <div class="col col-4">
                         <a href="blog.html" title="Gracias" id="featured-thumbnail">
-                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid"
-                                    alt="asdfd" title="asdfasdf">
+                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid" alt="asdfd" title="asdfasdf">
                             </div>
                         </a>
                     </div>
@@ -145,9 +121,7 @@
                         <p class="card-text"><small class="text-muted">FAMILIA RODRIGUEZ | Última actualización 3
                                 semanas</small></p>
                         <hr />
-                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
-                            majority have suffered alteration in some form, by injected humour, or randomised words
-                            which don't look even slightly believable.</p>
+                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
                     </div>
                 </div>
 
@@ -156,8 +130,7 @@
                 <div class="row">
                     <div class="col col-4">
                         <a href="blog.html" title="Gracias" id="featured-thumbnail">
-                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid"
-                                    alt="asdfd" title="asdfasdf">
+                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid" alt="asdfd" title="asdfasdf">
                             </div>
                         </a>
                     </div>
@@ -166,9 +139,7 @@
                         <p class="card-text"><small class="text-muted">FAMILIA RODRIGUEZ | Última actualización 3
                                 semanas</small></p>
                         <hr />
-                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
-                            majority have suffered alteration in some form, by injected humour, or randomised words
-                            which don't look even slightly believable.</p>
+                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
                     </div>
                 </div>
 
@@ -177,8 +148,7 @@
                 <div class="row">
                     <div class="col col-4">
                         <a href="blog.html" title="Gracias" id="featured-thumbnail">
-                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid"
-                                    alt="asdfd" title="asdfasdf">
+                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid" alt="asdfd" title="asdfasdf">
                             </div>
                         </a>
                     </div>
@@ -187,9 +157,7 @@
                         <p class="card-text"><small class="text-muted">FAMILIA RODRIGUEZ | Última actualización 3
                                 semanas</small></p>
                         <hr />
-                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
-                            majority have suffered alteration in some form, by injected humour, or randomised words
-                            which don't look even slightly believable.</p>
+                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
                     </div>
                 </div>
             </div>
