--- a/list.html
+++ b/list.html
@@ -30,7 +30,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <div class="menuHorizontal collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="list.html">Home <span class="sr-only"></span></a>
@@ -53,14 +53,12 @@
         </div>
     </nav>
 
-    <!-- jumbotron -->
     <div class="logo">
         <img src="assets/Patitas-01.jpg" class="img-responsive" alt="" title="">
 
     </div>
     <hr />
 
-    <!-- fin jumbotron -->
 
 
     <div class="container-fluid shadow-lg p-3 mb-5 bg-white rounded">
