--- a/newAnimal.html
+++ b/newAnimal.html
@@ -23,11 +23,12 @@
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="63" width="80"></span>
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        <div class="menuHorizontal collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="list.html">Home <span class="sr-only"></span></a>
@@ -43,27 +44,18 @@
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
-            <button class="LogIn btn btn-outline-primary" type="submit"> LogIn -
-                Register
-            </button>
+            <button class="LogIn btn btn-outline-light" type="submit"> LogIn -
+                    Register
+                </button>
         </div>
     </nav>
 
-    <div class="jumbotron">
-        <div class="container text-Left">
-            <p class="h1 text-primary">
-                I am looking for friend!</p>
-            <p class="h6">
-                <blockquote> "is a template for a simple marketing or informational website. This is a template for a simple marketing or informational website. This is a template for a simple marketing or informational wplate for a simple marketing or informational"</blockquote>
-                website. This is a template for a simple marketing or informational website. This is a template for a simple marketing or informational website. This is a template for a simple marketing or informational website. This is a template for a simple marketing
-                or informational website. This is a template for a simple marketing or informational website. </p>
-            <button type="button" class="btn btn-primary">Learn more >></button>
+    <div class="logo">
+        <img src="assets/Patitas-01.jpg" class="img-responsive" alt="" title="">
 
-        </div>
     </div>
+    <hr />
 
     <div class="titulo">
         <blockquote class="blockquote text-center">
