--- a/testing.html
+++ b/testing.html
@@ -17,169 +17,172 @@
     <!-- Creamos el header con la cabecera de la pagina, en este caso solo tenemos el titulo -->
 
     <header></header>
-    <!-- Creamos un menu para navegacion por la pagina -->
-    <nav class="menu">
-        <div class="conteiner-fluid">
-            <div class="row align-items-end">
-                <div class="col col-sm-4 align-self-end">
-                    <ul class="list-group list-group-horizontal-sm list-group-flush list-group-item-ligh">
-                        <li><a href="list.html" class="">Home</a></li>
-                        <li><a href="newAnimal.html" class="">Nuevo</a></li>
-                        <li><a href="blog.html" class="">Blog</a></li>
-                        <li><a href="whishlist.html" class="">Whishlist</a></li>
-                    </ul>
-                </div>
-                <div class="col col-sm-4">
-                    <div class="logo">
-                        <img src="assets/Patitas-02.png" class="img-responsive" alt="" title="">
-                    </div>
-                </div>
-                <div class="LogInn col col-sm-4">
-                    <button class="LogIn btn btn-outline-primary" type="submit"> LogIn -
-                    Register
-                  </button>
-                </div>
-            </div>
-
-
-
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="63" width="80"></span>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="menuHorizontal collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="list.html">Home <span class="sr-only"></span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="newAnimal.html">Nuevo <span class="sr-only"></span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="blog.html">Blog <span class="sr-only"></span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="whishlist.html">Whishlist <span class="sr-only"></span></a>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+            </form>
+            <button class="LogIn btn btn-outline-light" type="submit"> LogIn -
+                Register
+            </button>
         </div>
     </nav>
+
+    <div class="logo">
+        <img src="assets/Patitas-01.jpg" class="img-responsive" alt="" title="">
+
+    </div>
+    <hr />
     <hr />
 
+    <main>
 
+        <!-- Añadimos una seccion -->
+        <section>
+            <div class="container-fluid shadow-lg p-3 mb-5 bg-white rounded">
+                <div class="row justify-content-start">
+                    <div class="serchVerticalL col col-sm-2 borderless">
 
-    <main></main>
+                        <form class="form" action="">
+                            <p>
+                                <h4>Filtros</h4>
+                            </p>
+                            <hr />
+                            <div class="form-group">
+                                <label for="tipo">Tipo</label>
+                                <input type="tipo" class="form-control" id="tipo">
+                            </div>
+                            <div class="form-group">
+                                <label for="nombre">Nombre</label>
+                                <input type="nombre" class="form-control" id="nombre">
+                            </div>
 
+                            <div class="form-group">
+                                <label for="barrio">Barrio</label>
+                                <input type="barrio" class="form-control" id="barrio">
+                            </div>
+                            <div class="form-group">
+                                <label for="raza">Raza</label>
+                                <input type="raza" class="form-control" id="raza">
+                            </div>
+                            <div class="form-group">
+                                <label for="sexo">Sexo</label>
+                                <input type="sexo" class="form-control" id="sexo">
+                            </div>
+                            <div class="form-group">
+                                <label for="edad">Edad</label>
+                                <input type="edad" class="form-control" id="edad">
+                            </div>
+                            <div class="form-group">
+                                <label for="pelo">Color de pelo</label>
+                                <input type="pelo" class="form-control" id="pelo">
+                            </div>
+                            <div class="form-group">
+                                <label for="ojos">Color de ojos</label>
+                                <input type="ojos" class="form-control" id="ojos">
+                            </div>
 
-
-
-
-    <!-- Añadimos una seccion -->
-    <section>
-        <div class="container-fluid shadow-lg p-3 mb-5 bg-white rounded">
-            <div class="row justify-content-start">
-                <div class="serchVerticalL col col-sm-2 borderless">
-
-                    <form class="form" action="">
-                        Filtros
-                        <hr />
-                        <div class="form-group">
-                            <label for="tipo">Tipo</label>
-                            <input type="tipo" class="form-control" id="tipo">
-                        </div>
-                        <div class="form-group">
-                            <label for="nombre">Nombre</label>
-                            <input type="nombre" class="form-control" id="nombre">
-                        </div>
-
-                        <div class="form-group">
-                            <label for="barrio">Barrio</label>
-                            <input type="barrio" class="form-control" id="barrio">
-                        </div>
-                        <div class="form-group">
-                            <label for="raza">Raza</label>
-                            <input type="raza" class="form-control" id="raza">
-                        </div>
-                        <div class="form-group">
-                            <label for="sexo">Sexo</label>
-                            <input type="sexo" class="form-control" id="sexo">
-                        </div>
-                        <div class="form-group">
-                            <label for="edad">Edad</label>
-                            <input type="edad" class="form-control" id="edad">
-                        </div>
-                        <div class="form-group">
-                            <label for="pelo">Color de pelo</label>
-                            <input type="pelo" class="form-control" id="pelo">
-                        </div>
-                        <div class="form-group">
-                            <label for="ojos">Color de ojos</label>
-                            <input type="ojos" class="form-control" id="ojos">
-                        </div>
-
-                        <a href="animal.html" class="btn btn-primary btn-md active" role="button" aria-pressed="true">Buscar</a>
-                        <button type="reset" class="btn btn-secondary">Cancelar</button>
-                    </form>
-                </div>
+                            <a href="animal.html" class="btn btn-primary btn-md active" role="button" aria-pressed="true">Buscar</a>
+                            <button type="reset" class="btn btn-secondary">Cancelar</button>
+                        </form>
+                    </div>
 
 
 
-                <div class="col col-sm-center">
-                    <div class="row">
-                        <div class="col col-sm-4">
-                            <div class="card">
-                                <img src="assets/dog_10.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">Max</h5>
-                                    <p class="card-text">Some quicktitle and make up the bulk of the card's content.</p>
-                                    <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                    <div class="col col-sm-center">
+                        <div class="row">
+                            <div class="col col-sm-4">
+                                <div class="card">
+                                    <img src="assets/dog_10.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Max</h5>
+                                        <p class="card-text">Some quicktitle and make up the bulk of the card's content.</p>
+                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col col-sm-4">
-                            <div class="card">
-                                <img src="assets/dog_06.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">Zeus</h5>
-                                    <p class="card-text">Some quick example tdfdfg dfg dfgdfg dfgfd gext to build on the card title and make up the bulk of the card's content.</p>
-                                    <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                            <div class="col col-sm-4">
+                                <div class="card">
+                                    <img src="assets/dog_06.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Zeus</h5>
+                                        <p class="card-text">Some quick example tdfdfg dfg dfgdfg dfgfd gext to build on the card title and make up the bulk of the card's content.</p>
+                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col col-sm-4">
-                            <div class="card">
-                                <img src="assets/dog_07.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">Clarita</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                    <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                            <div class="col col-sm-4">
+                                <div class="card">
+                                    <img src="assets/dog_07.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Clarita</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
 
-                        <div class="col col-sm-4">
-                            <div class="card">
-                                <img src="assets/dog_11.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">Clarita</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                    <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                            <div class="col col-sm-4">
+                                <div class="card">
+                                    <img src="assets/dog_11.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Clarita</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col col-sm-4">
-                            <div class="card">
-                                <img src="assets/dog_08.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">Clarita</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                    <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                            <div class="col col-sm-4">
+                                <div class="card">
+                                    <img src="assets/dog_08.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Clarita</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col col-sm-4">
-                            <div class="card">
-                                <img src="assets/dog_09.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">Clarita</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                    <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                            <div class="col col-sm-4">
+                                <div class="card">
+                                    <img src="assets/dog_09.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Clarita</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="serchVerticalR col col-sm-2">
-                    <img src="assets/publicidad_01.jpg" class="card-img-top" alt="...">
-                    <hr />
-                    <img src="assets/publicidad_02.jpg" class="card-img-top" alt="...">
-                    <hr />
+                    <div class="serchVerticalR col col-sm-2">
+                        <img src="assets/publicidad_01.jpg" class="card-img-top" alt="...">
+                        <hr />
+                        <img src="assets/publicidad_02.jpg" class="card-img-top" alt="...">
+                        <hr />
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
-
+        </section>
+    </main>
 
     <!-- footer -->
 
@@ -193,21 +196,7 @@
 
 
 <style>
-    .logo {
-        text-align: center;
-        padding-top: 5px;
-        background-color: white;
-        margin: 0 auto;
-    }
-    
-    .logo img {
-        width: 250px;
-        margin: 0 auto;
-    }
-    
-    .LogInn {
-        text-align: right;
-    }
+
 </style>
 
 </html>
